1. Доработки алгоритма проверки 2. Мелкие исправления